tests/cases/memory/errors/zone-alloc-type-args.ari
fn main() -> i64 {
  var zone = zone::create(64);
  let item = zone::alloc<i64, bool>(ref mut zone);
  zone::destroy(zone);
  return 0;
}
